Fix the table spacing in general

--- a/assets/main.css
+++ b/assets/main.css
@@ -122,6 +122,7 @@
   .workout-info {
     @apply border-neutral-700;
 
+    th,
     td {
       @apply px-2;
     }
